--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
 	"name": "tabler-template-svelte",
-	"version": "0.0.1",
-	"scripts": {
+	"version": "0.1.1",
+	"description": "Svelte version for the Tabler template.",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Wtower/tabler-template-svelte"
+	  },
+	  "keywords": ["tabler", "sveltekit"],
+	  "author": {"name": "George Karakostas"},
+	  "bugs": {"url": "https://github.com/Wtower/tabler-template-svelte/issues"},
+	  "homepage": "https://magnum.9-dev.com/tabler/",
+	  "scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
@@ -28,7 +38,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
-		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/package": "^2.0.2",
 		"date-picker-svelte": "^2.2.5",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
